Hero block had strange spacing before the title and inconsistent styling in general. This fixes that.

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -78,10 +78,6 @@
   .unit__title {
     margin-top: $spacing-double;
   }
-
-  .container {
-    padding-top: 0;
-  }
 }
 
 .unit__contact {
